Working on Chapter 10

--- a/book/book.tex
+++ b/book/book.tex
@@ -4646,7 +4646,7 @@ Manny Ramirez is a former member of the Boston Red Sox (an American baseball tea
 
 {\it What is the minimum effort required to hit a home run in Fenway Park?}
 
-Fenway Park is a baseball stadium in Boston, Massachusetts.  One of it's most famous features is the ``Green Monster", which is a wall in left field that is unusually close to home plate, only 310 feet along the left field line (see \url{https://en.wikipedia.org/wiki/Green_Monster}).  To compensate for the short distance, the wall is unusually high, at 37 feet.
+Fenway Park is a baseball stadium in Boston, Massachusetts.  One of its most famous features is the ``Green Monster", which is a wall in left field that is unusually close to home plate, only 310 feet along the left field line (see \url{https://en.wikipedia.org/wiki/Green_Monster}).  To compensate for the short distance, the wall is unusually high, at 37 feet.
 
 Our goal is to find the minimum velocity at which a ball can leave home plate and still go over the Green Monster.  We'll proceed in the following steps:
 
